--- a/config/.env-exemple
+++ b/config/.env-exemple
@@ -1,5 +1,7 @@
 PORT = myPORT
 
+TOKEN_SECRET=myTOKEN
+
 MONGODB_USER = "myMongoDbId"
 MONGODB_PASSWORD = "myMongoDbPassword"
 MONGODB_CLUSTER_NAME = "myMongoDbClusterName"
