--- a/config/.env-exemple
+++ b/config/.env-exemple
@@ -1,7 +1,9 @@
-PORT = myPORT
+PORT=5000
+
+PORT_FRONT=3000
 
 TOKEN_SECRET=myTOKEN
 
-MONGODB_USER = "myMongoDbId"
-MONGODB_PASSWORD = "myMongoDbPassword"
-MONGODB_CLUSTER_NAME = "myMongoDbClusterName"
+MONGODB_USER="myMongoDbId"
+MONGODB_PASSWORD="myMongoDbPassword"
+MONGODB_CLUSTER_NAME="myMongoDbClusterName"
